src/test/resources/functionly/bad/syntax/bad1.fly
public function bad1(a, b)
begin
  return a + b
end